[package]
name = "pso-rs"
version = "0.1.0"
authors = ["Christos Zonios <czonios@gmail.com>"]
description = "An easy-to-use, simple Particle Swarm Optimization implementation in Rust"
edition = "2018"
license = "MIT"
repository = "https://github.com/czonios/pso-rs"
homepage = "https://github.com/czonios/pso-rs"
documentation = "https://docs.rs/pso-rs/latest/pso_rs/"
exclude = [
    "src/bin",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
indicatif = "0.16.2"
rayon = "1.5.1"

# [profile.release]
# debug = true